Fix useless empty margin on narrower viewports

--- a/source/rock-and-roll-with-emberjs/css/custom.css
+++ b/source/rock-and-roll-with-emberjs/css/custom.css
@@ -361,8 +361,11 @@ a {
 }
 
 .wrap-container {
-    width:600px;
     margin:0 auto;
+}
+
+@media(min-width: 768px) {
+  width: 600px;
 }
 
 .wrap {
